# credit-all

./: .all-contributorsrc  .pre-commit-config.yaml  CodeOfConduct.md  Credit-all.odp  LICENSE.md  MANIFEST.in  README.md  setup.cfg  setup.py
creditall/: Untitled.ipynb  __main__.py  cli.py  generate.py  paths.py  roles.yaml
creditall/templates/: README.md  contributors.csv  publication.tex
template-demo/: README.md  contributors.csv  publication.tex
