[metadata]
name = creditall
version = attr: creditall.__version__
description = A CLI for allcontributorsrc with a focus on research software
long_description = file: README.md
long_description_content_type = text/markdown
author = Dominic Kempf
author_email = ssc@iwr.uni-heidelberg.de
license = MIT License
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    Click>=8.0
    gitpython
    jinja2
    prompt_toolkit
    pyaml
include_package_data = True

[options.entry_points]
console_scripts =
    creditall = creditall.__main__:cli

[options.package_data]
* =
    templates/*
    roles.yaml
